--- a/package.json
+++ b/package.json
@@ -8,17 +8,19 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "10.0.3",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
     "@next/bundle-analyzer": "^10.0.2",
     "axios": "^0.21.0",
     "date-fns": "^2.16.1",
     "framer-motion": "^2.9.5",
+    "hkscs_converter": "^0.2.0",
+    "js-kmb-api": "^3.2.5",
     "lodash": "^4.17.20",
+    "next": "10.0.3",
     "next-compose-plugins": "^2.2.1",
     "next-pwa": "^3.1.5",
     "nprogress": "^0.2.0",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
     "sass": "^1.29.0",
     "styled-components": "^5.2.1",
     "swr": "^0.3.9"
